--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,17 @@ name = "rta"
 version = "0.1.0"
 description = "Run-based Research Thinking Agent pipeline"
 requires-python = ">=3.10"
+
 dependencies = [
   "typer>=0.12.0",
   "pydantic>=2.7.0",
   "google-genai>=0.5.0",
-  "python-dotenv>=1.0.1"
+  "python-dotenv>=1.0.1",
+  "prompt-toolkit>=3.0.43"
 ]
 
 [project.scripts]
-rta = "rta.cli:app"
+rta = "rta.cli:main"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
