--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,11 @@ dependencies = [
   "typer>=0.12.0",
   "pydantic>=2.7.0",
   "google-genai>=0.5.0",
+  "google-generativeai>=0.3.0",
   "python-dotenv>=1.0.1",
-  "prompt-toolkit>=3.0.43"
+  "prompt-toolkit>=3.0.43",
+  "numpy>=1.26.0",
+  "scikit-learn>=1.4.0",
 ]
 
 [project.scripts]
